update search page

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,137 @@
+altgraph==0.17
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
 asgiref==3.3.1
 astroid==2.4.2
+async-generator==1.10
+attrs==21.2.0
+auto-py-to-exe==2.8.0
+backcall==0.2.0
 beautifulsoup4==4.9.3
+bleach==3.3.0
+bottle==0.12.19
+bottle-websocket==0.2.9
 bs4==0.0.1
 certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
+cryptography==3.4.6
 cycler==0.10.0
+dateparser==1.0.0
+decorator==5.0.9
+defusedxml==0.6.0
+distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.1.5
+django-allauth==0.44.0
+django-crispy-forms==1.11.0
 django-heroku==0.0.0
 docx==0.2.4
+Eel==0.12.4
+entrypoints==0.3
+filelock==3.0.12
+future==0.18.2
+gevent==21.1.2
+gevent-websocket==0.10.1
 glob2==0.7
+greenlet==1.0.0
 gunicorn==20.0.4
 heroku==0.1.4
+humanize==3.6.0
 idna==2.10
+ipykernel==5.5.5
+ipython==7.24.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
 isort==5.7.0
+jedi==0.18.0
+Jinja2==3.0.1
 joblib==1.0.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
+llvmlite==0.36.0
 lxml==4.6.2
+macholib==1.14
+MarkupSafe==2.0.1
 matplotlib==3.3.3
+matplotlib-inline==0.1.2
+maya==0.6.1
 mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
 nltk==3.5
+notebook==6.4.0
+numba==0.53.1
 numpy==1.19.5
+oauthlib==3.1.0
+packaging==20.9
 pandas==1.2.0
+pandocfilters==1.4.3
+parso==0.8.2
+pendulum==2.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.1.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.18
 psycopg2-binary==2.8.6
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.9.0
+pyinstaller==4.2
+pyinstaller-hooks-contrib==2020.11
+PyJWT==2.0.1
 pylint==2.6.0
 pyparsing==2.4.7
-python-dateutil==1.5
+pyrsistent==0.17.3
+python-dateutil==2.8.1
 python-docx==0.8.10
+python3-openid==3.2.0
 pytz==2020.5
+pytzdata==2020.1
+pyzmq==22.1.0
+qtconsole==5.1.0
+QtPy==1.9.0
 regex==2020.11.13
 requests==2.25.1
+requests-oauthlib==1.3.0
+scikit-learn==0.24.2
 scipy==1.6.0
 seaborn==0.11.1
+Send2Trash==1.5.0
+Shapely==1.7.1
 six==1.15.0
+snaptime==0.2.4
 soupsieve==2.2
 sqlparse==0.4.1
+terminado==0.10.1
+testpath==0.5.0
+threadpoolctl==2.1.0
 toml==0.10.2
+tornado==6.1
 tqdm==4.56.0
+traitlets==5.0.5
+tzlocal==2.1
 urllib3==1.26.2
+virtualenv==20.4.3
+wcwidth==0.2.5
+webencodings==0.5.1
+whichcraft==0.6.1
 whitenoise==5.2.0
+widgetsnbextension==3.5.1
 wrapt==1.12.1
+zope.event==4.5.0
+zope.interface==5.2.0
